<resources>
    <string name="app_name">MyApplication12</string>
    <string name="action_settings">Settings</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="address">Address</string>
    <string name="TakePhoto">Take Photo</string>
    <string name="title_activity_maps">Map</string>
    <string name="signup">Sign Up</string>

</resources>
